# adaptive_sdk

./: .gitignore  README.md  async_gql_client_config.toml  pyproject.toml
src/adaptive_sdk/: __init__.py  base_client.py  client.py  error_handling.py  openapi.json  queries.graphql  schema.graphql  utils.py
src/adaptive_sdk/graphql_client/: __init__.py  add_external_model.py  add_hf_model.py  add_model.py  add_remote_env.py  async_base_client_open_telemetry.py  async_client.py  attach_model_to_use_case.py  base_client_open_telemetry.py  base_model.py  base_operation.py  cancel_ab_campaign.py  cancel_evaluation_job.py  cancel_training_job.py  client.py  create_ab_campaign.py  create_evaluation_job.py  create_metric.py  create_role.py  create_team.py  create_training_job.py  create_use_case.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  deploy_model.py  describe_ab_campaign.py  describe_dataset.py  describe_evaluation_job.py  describe_interaction.py  describe_me.py  describe_metric.py  describe_metric_admin.py  describe_model.py  describe_model_admin.py  describe_training_job.py  describe_use_case.py  enums.py  exceptions.py  (+28 more)
src/adaptive_sdk/input_types/: __init__.py  typed_dicts.py
src/adaptive_sdk/resources/: __init__.py  abtests.py  base_resource.py  chat.py  (+11 more)
tests/: e2e_async_test.py  e2e_sync_test.py  ppo_training_test.py  rlef_training_test.py  test_basic_usage.py  unit_test.py  unit_tests.py  utils.py
tests/integration_data/: eval_prompt.jsonl  eval_prompt_completion.jsonl  eval_prompt_completion_metrics.jsonl  eval_prompt_completion_preference.jsonl  faithfulness_ds.jsonl  hh-preference-training-200.jsonl  relevancy.jsonl  scaryLetter.dataset.jsonl
(+10 files in other folders)
