[project]
name = "adaptive_sdk"
version = "0.1.0b1"
description = "Python SDK for Adaptive Engine"
authors = [
  { name = "Vincent Debergue", email = "vincent@adaptive-ml.com" },
  { name = "Joao Moura", email = "joao@adaptive-ml.com" },
  { name = "Yacine Bouraoui", email = "yacine@adaptive-ml.com" },

]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx >= 0.27.2",
  "gql >= 3.5.0",
  "pydantic[email] >= 2.9.0",
  "pyhumps >= 3.8.0",
  "fastapi >= 0.115.8",
  "uvicorn >= 0.34.0",
  "jsonschema==4.23.0",
  "types-jsonschema==4.23.0.20241208",
  "loguru >= 0.7.0"
]

[project.optional-dependencies]
dev = [
  "ariadne-codegen >= 0.14.0",
  "datamodel-code-generator >= 0.25.8",
  "astor >= 0.8.1",
  "pdoc >= 15.0.1",
  "toml>=0.10.2",
  "black==25.1.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "mypy>=1.15.0",
]

[tool.ariadne-codegen]
schema_path = "schema.graphql"
queries_path = "queries.graphql"
target_package_name = "graphql_client"
target_package_path = "src/adaptive_sdk"
client_name = "GQLClient"
async_client = false
opentelemetry_client = true
enable_custom_operations = true

[tool.ariadne-codegen.scalars.IdOrKey]
type = "str"
[tool.ariadne-codegen.scalars.Timestamp]
type = "int"
[tool.ariadne-codegen.scalars.InputDatetime]
type = "int | str"
[tool.ariadne-codegen.scalars.TimestampSec]
type = "int"

[tool.mypy]
# Ignore missing type hints in imported libraries
ignore_missing_imports = true

files = "src/adaptive_sdk"
exclude = "src/adaptive_sdk/graphql_client/|src/adaptive_sdk/rest/"
allow_redefinition = true


[tool.black]
required-version = '25.1.0'
